tests/structurals/ill-typed/lists-1.stella
language core;

extend with #lists, #structural-patterns;


fn main(n : [Nat]) -> Bool {
  return match(n) {
    		[] => true
    	| 0 => false
    }
}
